# slurp-x

./: Cargo.toml  README.md
.github/workflows/: build_release.yaml
script/: build_debug.sh  build_release.sh
src/: main.rs
